--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mteoh",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mark-teoh.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
